welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def(bPas : Int, versLAvant: Boolean) {
^Program:2: error: expected class or object definition
def(bPas : Int, versLAvant: Boolean) {
^